--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -1,5 +1,9 @@
 /iron-router
-/blaze-layout
 /spin
 /accounts-ui-bootstrap-dropdown
 /iron-router-progress
+/blaze-layout
+/accounts-entry
+/just-i18n
+/accounts-t9n
+/bootstrap3-less
